--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-This is a repository for Care-O-bot calibration packages.
+This is a repository for Care-O-bot calibration packages.....
 
 Documentation and tutorials can be found at http://ros.org/wiki/cob_calibration.
